Horizontal scroll issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body,html{
     height:100vh;
-    width:100vw;
     margin:0;
     padding:0;
     color:black;
@@ -210,13 +209,13 @@ a:hover{
         width:auto;
     }
     h1{
+        font-size: 1.5rem;
+    }
+    h2 {
         font-size: 1.4rem;
     }
-    h2{
-        font-size: 1.2rem ;
-    }
     h3{
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
     .page-footer .navbar ul{
         flex-wrap: nowrap;
